@@ -198,7 +198,7 @@
 	author = {Markus Gesmann and Diego de Castillo},
 	year = {2014},
 	note ={R package version 0.5.2},
-	Howpublished = {\url{http://code.google.com/p/google-motion-charts-with-r/}}
+	Howpublished = {\url{http://github.com/mages/googleVis}}
 }
 
 @misc{brew2010,
