@@ -1,7 +1,8 @@
-googleVis 0.5.2 [2014-04-15]
+googleVis 0.5.2 [2014-04-21]
 ----------------------------
-NEW FEATURES
+Changes
 
+* Minor formatting issues in documentation and vignettes.
 
 googleVis 0.5.1 [2014-04-14]
 ----------------------------
